# llama-live-chart-backend

./: .gitignore  .railwayignore  migrate_add_notes.py  migrate_user_prefs.py  pyproject.toml  railway.json  run.py  sql_app.db  test_backend.py  test_news.py  test_reg.py  watchlist.json
app/: main.py
app/api/: deps.py
app/api/endpoints/: auth.py  market.py  portfolio.py  stock.py  watchlist.py
app/core/: config.py
app/db/: base.py  session.py
app/models/: portfolio.py  training_history.py  user.py  watchlist.py
app/services/: email_service.py  hybrid_prediction_service.py  portfolio_service.py  prediction_service.py  scheduler.py  sentiment_service.py  twelvedata_service.py  watchlist_service.py  yfinance_service.py
scripts/: generate_showcase_plots.py
