[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.3",
    "numpy>=2.4.4",
    "pandas>=3.0.2",
    "pydantic-settings>=2.13.1",
    "requests>=2.33.1",
    "scikit-learn>=1.8.0",
    "uvicorn>=0.27.0",
    "yfinance>=1.2.0",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "typing-extensions>=4.15.0",
    "sqlalchemy>=2.0.0",
    "passlib[bcrypt]>=1.7.4",
    "bcrypt==3.2.0",
    "python-jose[cryptography]>=3.3.0",
    "python-multipart>=0.0.7",
    "email-validator>=2.0.0",
    "pydantic[email]>=2.12.5",
    "psycopg2-binary>=2.9.11",
    "torch>=2.11.0",
    "apscheduler>=3.11.2",
    "resend>=2.27.0",
    "twelvedata[pandas]>=1.2.28",
]

[project.scripts]
start = "uvicorn.run(\"app.main:app\", host=\"127.0.0.1\", port=8000, reload=True)"
